k8s_playbooks/application_manifests/pihole/pihole.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pihole
  labels:
    app: pihole
  namespace: pihole
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pihole
  template:
    metadata:
      labels:
        app: pihole
        name: pihole
    spec:
      containers:
      - name: pihole
        image: pihole/pihole:latest
        imagePullPolicy: Always
        volumeMounts:
        - name: pihole-pv
          mountPath: /etc/pihole
        - name: pihole-pv
          mountPath: /etc/dnsmasq.d
      volumes:
      - name: pihole-pv
        persistentVolumeClaim:
          claimName: pihole-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: pihole-admin
  namespace: pihole
spec:
  selector:
    app: pihole
  ports:
  - port: 8000
    targetPort: 80
    name: pihole-admin
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: pihole-dns
  namespace: pihole
spec:
  selector:
    app: pihole
  ports:
  - port: 53
    targetPort: 53
    protocol: TCP
    name: dns-tcp
  - port: 53
    targetPort: 53
    protocol: UDP
    name: dns-udp
  type: LoadBalancer
  loadBalancerIP: 192.168.175.20
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pihole-ingress
  namespace: pihole
spec:
  ingressClassName: nginx
  rules:
  - host: pihole.cv-labs.net
    http:
      paths: 
      - path: /
        pathType: Prefix
        backend:
          service:
            name: pihole-admin
            port:
              number: 80
